public-eks/cbioportal-prod/shared-services/ingress/oncokb_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    # ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    # increae max response size to avoid 413 errors see
    # https://github.com/kubernetes/ingress-nginx/issues/1824
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-body-size: 512m
    # add proxy protocol to header
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  name: oncokb-ingress
  namespace: oncokb
spec:
  tls:
  - hosts:
    - cbioprod.oncokb.org
    - sop.oncokb.org
    secretName: oncokb-cert
  rules:
  - host: cbioprod.oncokb.org
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: oncokb-public
              port:
                number: 9095
  - host: sop.oncokb.org
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: oncokb-sop
              port:
                number: 80
